[package]
name = "smh"
version = "0.1.0"
authors = ["Jack Pearson <jack@pearson.onl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.4.5"
macaddr = "^1.0.1"
anyhow = "^1.0.40"
toml = "^0.5.8"
etc-passwd = "^0.1.1"